--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>IRL Among Us</title>
+    <link rel="icon" href="/icon.jpg"/>
     <link rel="manifest" href="/manifest.json"/>
     <style>
         body {
